# NativeFX

./: .gitignore  .travis.yml  README.md  build.gradle  settings.gradle
azure-pipelines/: build-job-unix.yml  build-job-windows.yml  build-unix.sh  build-windows.bat  build.yml  dev64.ps1  run-windows.bat
config/: HEADER
gradle/: project-info.gradle
sample-servers/headers/nativefx/: nativefx_server.hpp  shared_memory.h
sample-servers/nativefx-qt/: CMakeLists.txt  build.ps1  configure.ps1
sample-servers/nativefx-qt/src/main/cpp/: __macos__disable_appnap.cpp  main.cpp  vfxwebpage.cpp
sample-servers/nativefx-qt/src/main/headers/: vfxwebpage.h
sample-servers/playground/key-evt-sample/: CMakeLists.txt
sample-servers/playground/key-evt-sample/src/main/cpp/: keyeventwidget.cpp  main.cpp
sample-servers/playground/key-evt-sample/src/main/headers/: keyeventwidget.h
sample-servers/sample-server/: .gitignore  CMakeLists.txt
sample-servers/sample-server/src/main/cpp/: main.cpp
sample-servers/sample-server/src/main/headers/: nativefx_server.hpp
src/main/java/animatefx/animation/: AnimateFXInterpolator.java  Bounce.java  BounceIn.java  BounceInDown.java  BounceInLeft.java  BounceInRight.java  BounceInUp.java  BounceOut.java  BounceOutDown.java  BounceOutLeft.java  BounceOutRight.java  BounceOutUp.java  FadeIn.java  FadeInDown.java  FadeInDownBig.java  FadeInLeft.java  FadeInLeftBig.java  FadeInRight.java  FadeInRightBig.java  FadeInUp.java  FadeInUpBig.java  FadeOut.java  FadeOutDown.java  FadeOutDownBig.java  FadeOutLeft.java  FadeOutLeftBig.java  FadeOutRight.java  FadeOutRightBig.java  FadeOutUp.java  FadeOutUpBig.java  Flash.java  Flip.java  FlipInX.java  FlipInY.java  FlipOutX.java  FlipOutY.java  Hinge.java  JackInTheBox.java  Jello.java  LightSpeedIn.java  (+37 more)
src/main/java/eu/mihosoft/nativefx/: NativeBinding.java  NativeEventListener.java  NativeFXApp.java  NativeNode.java
src/main/native/: CMakeLists.txt
src/main/native/sample-server/: CMakeLists.txt
src/main/native/sample-server/src/main/cpp/: main copy  main.cpp
src/main/native/sample-server/src/main/headers/: nativefx_server.h  nativefx_server.hpp
src/main/native/src/main/cpp/: jnitypeconverter.cpp  nativefx.cpp
src/main/native/src/main/headers/: jnitypeconverter.h  shared_memory.h
src/test/java/eu/mihosoft/nativefx/: NativeBindingTest.java
